...
                        <cells/>
                    </collectionView>
                    <tabBarItem key="tabBarItem" title="Chats" id="1jf-H2-gNh"/>
                    <navigationItem key="navigationItem" title="Conversations" largeTitleDisplayMode="always" id="BIr-l7-1TX"/>
                    <connections>
...
                                <rect key="frame" x="167.5" y="625.5" width="79" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Calendar"/>
                                <connections>
                                    <segue destination="ot2-vW-eD3" kind="show" id="bCO-5L-Sym"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <inset key="imageEdgeInsets" minX="7" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="Log Out" image="chevron.left.circle.fill" catalog="system">
                                    <color key="titleColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yGO-dO-CKh">
                                <rect key="frame" x="20" y="632" width="374" height="40"/>
                                <accessibility key="accessibilityConfiguration" label="Pending"/>
                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                <state key="normal" title="View Appointments"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="RnN-Ad-nak">
                        <barButtonItem key="rightBarButtonItem" title="AddRequest" image="plus" catalog="system" style="plain" id="zjm-Ro-Fbq">
                            <connections>
                                <segue destination="Z5t-nS-y85" kind="show" id="6z0-1l-oU6"/>
...
                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Select Doctor">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select date and time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hEJ-n9-eFO">
                                <rect key="frame" x="30" y="298" width="354" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter details here" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wrA-ug-xQZ">
                                <rect key="frame" x="150" y="442" width="97" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                <rect key="frame" x="30" y="484" width="354" height="40"/>
                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                <state key="normal" title="Submit Appointment Request"/>
                                <connections>
                                    <segue destination="9i8-HL-cfa" kind="show" id="NsK-58-q40"/>
...
                                <rect key="frame" x="20" y="536" width="374" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                <state key="normal" title="Back to Calendar"/>
                                <connections>
                                    <action selector="onClickBackToCalendarButton:" destination="9i8-HL-cfa" eventType="touchUpInside" id="CF9-Um-Y7X"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NORMAL WORK HOURS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Em5-A9-hg6">
                                <rect key="frame" x="25" y="113" width="369" height="21"/>
                                <accessibility key="accessibilityConfiguration" label="Work Hours Label"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eVC-XS-iR9">
                                <rect key="frame" x="155" y="469" width="135" height="77"/>
                                <state key="normal" title="Leave Conversation"/>
                                <rect key="frame" x="127.5" y="325" width="159" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
                    </view>
                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="Ntu-NM-gzM">
                        <barButtonItem key="rightBarButtonItem" title="Info Button" image="info.circle" catalog="system" style="plain" id="5E5-7q-Xah">
                            <connections>
                                <action selector="onClick:" destination="qrY-CR-dFM" id="eXg-qz-5IQ"/>
...
