...
        super.viewDidLoad()
        var connector = Connector()
        AWSMobileClient.default().getTokens(connector.setToken(potentialTokens:potentialError:))
        processor = ConnectionProcessor(connector: connector)
        navigationItem.title = "Request Appointment"
//        self.form = AppointmentForm()
        dropdownTableView.accessibilityIdentifier = "Dropdown"
        
        dropdownTableView.delegate = self
        dropdownTableView.dataSource = self
        dropdownTableView.register(DropdownCell.self, forCellReuseIdentifier: "DropdownCell")
        // Do any additional setup after loading the view.
        
...
